# face_detection_opencv

./: CMakeLists.txt  README.md  cascade_config(opencv).txt  cascade_config.txt  detector.cpp  detector.h  detector.py  face_detection_save.cpp  face_detection_save.py  face_detection_window.cpp  face_detection_window.py  measure.txt  measure_params.py  multipart_server.py  requirements.txt  show_groundtruth.py  trying_params.py
data/: cascade.xml
