cmake_minimum_required(VERSION 2.8)
project( face_detection_window )
find_package( OpenCV REQUIRED )
include_directories( ${OpenCV_INCLUDE_DIRS} )
add_executable( face_detection_window face_detection_window.cpp detector.cpp )
add_executable( face_detection_save face_detection_save.cpp detector.cpp )
target_link_libraries( face_detection_window ${OpenCV_LIBS} )
target_link_libraries( face_detection_window -static-libstdc++)
target_link_libraries( face_detection_save ${OpenCV_LIBS} )
target_link_libraries( face_detection_save -static-libstdc++)
configure_file( cascade_config.txt cascade_config.txt COPYONLY)
